k8s/investmentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investmentservice-deployment
  labels:
    app: investmentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: investmentservice
  template:
    metadata:
      labels:
        app: investmentservice
    spec:
      containers:
        - name: investmentservice
          image: pratikbagm/investmentservice:latest
          ports:
            - containerPort: 8083
