k8s/loanservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loanservice-deployment
  labels:
    app: loanservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loanservice
  template:
    metadata:
      labels:
        app: loanservice
    spec:
      containers:
        - name: loanservice
          image: pratikbagm/loanservice:latest
          ports:
            - containerPort: 8082
