k8s/investmentservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investmentservice-service
spec:
  type: NodePort
  selector:
    app: investmentservice
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      nodePort: 30083
