k8s/loanservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loanservice-service
spec:
  type: NodePort
  selector:
    app: loanservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30082
