k8s/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8081         
      targetPort: 8081
      nodePort: 30081
